unpackaged/main/default/objects/Facility_Phone__c/Facility_Phone__c.object-meta.xml
<CustomObject>
    <label>Facility Phone</label>
    <nameField>
        <displayFormat>PH-{000000}</displayFormat>
        <label>Facility Phone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Phones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>