unpackaged/main/default/objects/Facility_Phone__c/fields/Phone_Order__c.field-meta.xml
<CustomField>
    <fullName>Phone_Order__c</fullName>
    <label>Phone Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>