unpackaged/main/default/objects/Facility_Phone__c/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cellular</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Pager</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Speed Dial</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>