unpackaged/main/default/objects/Facility_Phone__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Facility Phones</relationshipLabel>
    <relationshipName>Facility_Phones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>